--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
+<header>
 
+</header>
+
+<main>
+
+</main>
+
+<footer>
+
+</footer>
+<script src="bundle.js" type="text/javascript"></script>
 </body>
 </html>
