--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Енергетика майбутнього</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Roboto+Slab:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
 <header>
-
+    <h1>Енергетика майбутнього</h1>
+    <h2>Україна має технічний та економічний потенціал для переходу на відновлювані джерела енергії (ВДЕ). <span class="green">91%</span> зеленої енергетики до 2050 року можна отримати при використанні вже існуючих технологій та зменшенні споживання енергоресурсів на 42% в порівнянні з базовим сценарієм у 2050 році </h2>
 </header>
 
 <main>
+    <section id="chart">
+        <h3>Як перейти на ВДЄ у 2050?</h3>
+        <nav>
+            <ul></ul>
+        </nav>
+        <figure>
+            <svg></svg>
+        </figure>
+        <div id="explanation"></div>
+    </section>
 
 </main>
 
