--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <figure>
         </figure>
         <div id="explanation"></div>
+        <div class="data_caption">
+            <p>Дані: Інститут економіки та прогнозування НАН України</p>
+        </div>
     </section>
 
 </main>
