new data by costs

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
         </figure>
         <div id="explanation"></div>
         <div class="data_caption">
-            <p>Дані: Інститут економіки та прогнозування НАН України</p>
+            <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"ПЕРЕХІД УКРАЇНИНА ВІДНОВЛЮВАНУ ЕНЕРГЕТИКУ"</a></p>
         </div>
+    </section>
+    <section id="costs">
+        <h3>Вартість переходу на відновлювані джерела енергії</h3>
+        <p></p>
     </section>
 
 </main>
