--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
         </figure>
         <div id="explanation"></div>
         <div class="data_caption">
-            <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"ПЕРЕХІД УКРАЇНИНА ВІДНОВЛЮВАНУ ЕНЕРГЕТИКУ"</a></p>
+            <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"ПЕРЕХІД УКРАЇНИ НА ВІДНОВЛЮВАНУ ЕНЕРГЕТИКУ"</a></p>
         </div>
     </section>
     <section id="costs">
         <h3>Вартість переходу на відновлювані джерела енергії</h3>
-        <p></p>
+        <p>Після 2030 року витрати за сценарієм переходу будуть меншим ніж за базового сценарію за рахунок економії на паливі.</p>
+        <figure></figure>
+        <div class="data_caption">
+            <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"ПЕРЕХІД УКРАЇНИ НА ВІДНОВЛЮВАНУ ЕНЕРГЕТИКУ"</a></p>
+        </div>
     </section>
 
 </main>
