--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 <main>
     <section id="consumption">
         <div class="h3">
-            <h3>Як перейти на ВДЄ у 2050?</h3>
+            <h3>Перехід на ВДЕ до 2050-го: як зміниться споживання ресурсів</h3>
             <div>
-                <span>Революційний сценарій</span>
-                <span>Бездіяльність</span>
+                <span>Революційний сценарій, тис. тон н.е.</span>
             </div>
         </div>
 
