--- a/index.html
+++ b/index.html
@@ -63,9 +63,15 @@
     </section>
     <section id="costs">
         <h3>Вартість переходу на відновлювані джерела енергії</h3>
-        <p>Після 2030 року витрати за сценарієм переходу будуть меншим ніж за базового сценарію за рахунок економії на паливі.</p>
+        <p>Після 2030 року витрати за сценарієм переходу будуть меншими, ніж за базового сценарію за рахунок економії на паливі.</p>
         <figure>
+            <h5>Базовий сценарій</h5>
+            <h5>Перехід на ВДЕ</h5>
+            <div id="costs-legend"></div>
         </figure>
+        <div class="data_caption">
+            <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
+        </div>
     </section>
 
 </main>
