interaction on slopes

--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
         <h3>Вартість переходу на відновлювані джерела енергії</h3>
         <p>Після 2030 року витрати за сценарієм переходу будуть меншими, ніж за базового сценарію за рахунок економії на паливі.</p>
         <figure>
-            <h5>Базовий сценарій</h5>
-            <h5>Перехід на ВДЕ</h5>
+            <div class="h5 dirt">
+                <h5>Базовий сценарій</h5>
+                <p>млн. Євро</p>
+            </div>
+            <div class="h5 vde">
+                <h5>Перехід на ВДЕ</h5>
+                <p><span class="vde">13.7%</span> економії (порівняно з витратами у 2050 за базовим сценарієм)</p>
+            </div>
             <div id="costs-legend"></div>
         </figure>
         <div class="data_caption">
