h3 margins and tip to insteract with slopes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 <h5>Перехід на ВДЕ</h5>
                 <p><span class="vde">13.7%</span> економії (порівняно з витратами у 2050 за базовим сценарієм)</p>
             </div>
-            <div id="costs-legend"></div>
+            <div id="costs-legend">
+                <p><strong>Графіки інтерактивні: наведіть на лінію</strong></p>
+            </div>
         </figure>
         <div class="data_caption">
             <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
