--- a/texttop/index.html
+++ b/texttop/index.html
@@ -18,21 +18,20 @@
 
 <main>
     <section id="consumption">
-        <div class="h3">
-            <h3>Перехід на ВДЕ до 2050-го: як зміниться споживання ресурсів</h3>
-            <div>
-                <span>Революційний сценарій, тис. тон н.е.</span>
-            </div>
-        </div>
-
         <div class="fig_container">
+            <div class="h3">
+                <h3>Як зміниться споживання ресурсів - <span>загалом</span></h3>
+                <div>
+                    <span>Революційний сценарій, тис. тон н.е.</span>
+                </div>
+            </div>
             <figure>
                 <div class="chart" id="lines"></div>
                 <div class="chart" id="bars"></div>
-                <div class="data_caption">
-                    <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
-                </div>
             </figure>
+            <div class="data_caption">
+                <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
+            </div>
         </div>
         <article id="explanation">
             <div class="text" data-sphere="Загалом">
@@ -59,6 +58,7 @@
                 <h4>Транспорт</h4>
                 <ul><li class=""><i class="fas fa-check"></i> Легкові авто: 90% електромобілі, 10% на біопаливі</li><li><i class="fas fa-check"></i> Електроавтобуси та електропотяги</li><li><i class="fas fa-check"></i> Авіаційний, водний, вантажний транспорт на біопаливі</li></ul>
             </div>
+            <div class="text" id="phantom" style="opacity: 0; margin: 0"></div>
         </article>
     </section>
     <section id="costs">
