--- a/texttop/index.html
+++ b/texttop/index.html
@@ -7,13 +7,18 @@
     <title>Енергетика майбутнього</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Roboto+Slab:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+<p>Work in progress, all bugs to be fixed</p>
+<div id="menu-container"><img src="img/menu.png"></div>
 <header>
     <h1>Енергетика майбутнього</h1>
-    <h2>Україна має технічний та економічний потенціал для переходу на відновлювані джерела енергії (ВДЕ). <span class="green">91%</span> зеленої енергетики до 2050 року можна отримати при використанні вже існуючих технологій та зменшенні споживання енергоресурсів на 42% в порівнянні з базовим сценарієм у 2050 році </h2>
+    <img src="img/cover.png">
+    <h2>
+        <p>Україна має технічний та економічний потенціал для переходу на відновлювані джерела енергії.</p>
+        <p><span class="green">91%</span> зеленої енергетики до 2050 року можна отримати при використанні вже існуючих технологій та зменшенні споживання енергоресурсів на <span>42%</span> в порівнянні з базовим сценарієм у 2050 році.</p>
+    </h2>
 </header>
 
 <main>
