no break word in spans in expenses

--- a/texttop/index.html
+++ b/texttop/index.html
@@ -23,6 +23,10 @@
 </header>
 
 <main>
+    <section id="general">
+        <p style="text-align: center; font-style: italic">Графік власного видобутку + імпорту</p>
+    </section>
+
     <article id="why">
         <h3>Ефекти від переходу на "зелену" енергію</h3>
         <ul id="why_soc">
@@ -97,7 +101,8 @@
         </figure>
         <article>
             <p>Вже від 2030 року бездіяльність буде коштувати дорожче, ніж перехід на зелену енергетику. Витрати зменшаться завдяки економії на <span data-cost="Вартість палива">паливі</span>.</p>
-                <p>У 2050 році витрати за сценарієм переходу будуть на <span class="vde"><strong>13.7%</strong></span> нижчі, ніж за базовим сценарієм. При здійсненні енергетичного переходу зростуть <span data-cost="Капітальні інвестиції">капітальні інвестиції</span>, натомість більшість витрат суттєво скоротяться.</p>
+            <p>У 2050 році витрати за сценарієм переходу будуть на <span class="vde"><strong>13.7%</strong></span> нижчі, ніж за базовим сценарієм.</p>
+            <p>При здійсненні енергетичного переходу зростуть <span data-cost="Капітальні інвестиції">капітальні інвестиції</span>, натомість більшість витрат суттєво скоротяться.</p>
         </article>
         <div class="data_caption">
             <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
