em for measures

--- a/texttop/index.html
+++ b/texttop/index.html
@@ -51,7 +51,7 @@
         <div class="fig_container">
             <div class="h3">
                 <h3>Як зміниться споживання ресурсів - <span>загалом</span></h3>
-                <p><a id="switch_scenario" role="button">Революційний</a> сценарій, тис. тон н.е.</p>
+                <p><a id="switch_scenario" role="button">Революційний</a> сценарій, <em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
             </div>
             <figure>
                 <div class="chart" id="lines"></div>
@@ -93,7 +93,7 @@
         <div class="h3">
             <h3>Витрати за базовим та революційним сценарієм, <i class="fas fa-caret-left fa-lg active"></i> <span>2050</span> <i class="fas fa-caret-right fa-lg"></i> рік</h3>
             <div>
-                <p>млн. євро, прогноз</p>
+                <p><em>млн. євро</em>, прогноз</p>
             </div>
         </div>
         <figure>
