general chart options

--- a/texttop/index.html
+++ b/texttop/index.html
@@ -24,7 +24,29 @@
 
 <main>
     <section id="general">
-        <p style="text-align: center; font-style: italic">Графік власного видобутку + імпорту</p>
+        <div class="h3">
+            <h3>Загальне постачання первинної енергії</h3>
+            <p><a id="switch_scenario" role="button">Революційний</a> сценарій, <em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
+        </div>
+        <figure>
+            <svg></svg>
+        </figure>
+        <div class="data_caption">
+            <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
+        </div>
+    </section>
+
+    <section id="general2">
+        <div class="h3">
+            <h3>Загальне постачання первинної енергії</h3>
+            <p><a id="switch_scenario" role="button">Революційний</a> сценарій, <em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
+        </div>
+        <figure>
+            <svg></svg>
+        </figure>
+        <div class="data_caption">
+            <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
+        </div>
     </section>
 
     <article id="why">
