general chart and new slopes

--- a/texttop/index.html
+++ b/texttop/index.html
@@ -30,6 +30,7 @@
         </div>
         <figure>
             <svg></svg>
+            <div id="labels_gen"></div>
         </figure>
         <div class="data_caption">
             <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
