--- a/texttop/index.html
+++ b/texttop/index.html
@@ -26,7 +26,7 @@
     <section id="general">
         <div class="h3">
             <h3>Загальне постачання первинної енергії</h3>
-            <p><a id="switch_scenario" role="button">Революційний</a> сценарій, <em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
+            <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій,<br/><em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
         </div>
         <figure>
             <svg></svg>
@@ -40,7 +40,7 @@
     <section id="general2">
         <div class="h3">
             <h3>Загальне постачання первинної енергії</h3>
-            <p><a id="switch_scenario" role="button">Революційний</a> сценарій, <em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
+            <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій <em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
         </div>
         <figure>
             <svg></svg>
@@ -74,7 +74,7 @@
         <div class="fig_container">
             <div class="h3">
                 <h3>Як зміниться споживання ресурсів - <span>загалом</span></h3>
-                <p><a id="switch_scenario" role="button">Революційний</a> сценарій, <em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
+                <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій<br/><em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
             </div>
             <figure>
                 <div class="chart" id="lines"></div>
