turn on light on scroll in general

--- a/texttop/index.html
+++ b/texttop/index.html
@@ -28,6 +28,9 @@
             <h3>Загальне постачання первинної енергії</h3>
             <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій,<br/><em>тис. тон нафтового еквіваленту (н.е.)</em></p>
         </div>
+        <nav id="gen_helper">
+            <p></p>
+        </nav>
         <figure>
             <svg></svg>
             <div id="labels_gen"></div>
