--- a/texttop/index.html
+++ b/texttop/index.html
@@ -27,6 +27,7 @@
         <div class="h3">
             <h3>Загальне постачання первинної енергії</h3>
             <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій,<br/><em>тис. тон нафтового еквіваленту (н.е.)</em></p>
+            <p class="instruction">Клікайте на кнопки, щоб перемкнути сценарій. При наведенні на хвилясту лінію відображується постачання енергоресурсу в даний рік.</p>
         </div>
         <nav id="gen_helper">
             <p></p>
@@ -40,18 +41,18 @@
         </div>
     </section>
 
-    <section id="general2">
-        <div class="h3">
-            <h3>Загальне постачання первинної енергії</h3>
-            <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій <em>тис. тон нафтового еквіваленту (н.е.)</em></p>
-        </div>
-        <figure>
-            <svg></svg>
-        </figure>
-        <div class="data_caption">
-            <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
-        </div>
-    </section>
+    <!--<section id="general2">-->
+        <!--<div class="h3">-->
+            <!--<h3>Загальне постачання первинної енергії</h3>-->
+            <!--<p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій <em>тис. тон нафтового еквіваленту (н.е.)</em></p>-->
+        <!--</div>-->
+        <!--<figure>-->
+            <!--<svg></svg>-->
+        <!--</figure>-->
+        <!--<div class="data_caption">-->
+            <!--<p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>-->
+        <!--</div>-->
+    <!--</section>-->
 
     <article id="why">
         <h3>Ефекти від переходу на "зелену" енергію</h3>
@@ -81,7 +82,9 @@
             </div>
             <figure>
                 <div class="chart" id="lines"></div>
-                <div class="chart" id="bars"></div>
+                <div class="chart" id="bars">
+                    <p id="bar_year">2015</p>
+                </div>
             </figure>
             <div class="data_caption">
                 <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
