--- a/texttop/index.html
+++ b/texttop/index.html
@@ -27,7 +27,7 @@
         <div class="h3">
             <h3>Загальне постачання первинної енергії</h3>
             <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій,<br/><em>тис. тон нафтового еквіваленту (н.е.)</em></p>
-            <p class="instruction">Клікайте на кнопки, щоб перемкнути сценарій. При наведенні на хвилясту лінію відображується постачання енергоресурсу в даний рік.</p>
+            <p class="instruction">Клікайте на кнопки, щоб перемкнути сценарій. При наведенні на графік відображається постачання енергоресурсу в даний рік.</p>
         </div>
         <nav id="gen_helper">
             <p></p>
