--- a/texttop/index.html
+++ b/texttop/index.html
@@ -78,7 +78,7 @@
         <div class="fig_container">
             <div class="h3">
                 <h3>Як зміниться споживання ресурсів: <span id="h3_sphere">загалом</span></h3>
-                <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій<br/><em>тис. тон нафтового еквіваленту</em> (н.е.)</p>
+                <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій<br/><em>тис. тон нафтового еквіваленту (н.е.)</em></p>
             </div>
             <figure>
                 <div class="chart" id="lines"></div>
