--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </section>
     <section id="costs">
         <div class="h3">
-            <h3>Витрати за базовим та революційним сценарієм, <i class="fas fa-caret-left fa-lg active"></i> <span>2050</span> <i class="fas fa-caret-right fa-lg"></i> рік</h3>
+            <h3>Витрати за базовим та революційним сценарієм, <span class="nobreak"><i class="fas fa-caret-left fa-lg active"></i> <span id="costs_year">2050</span> <i class="fas fa-caret-right fa-lg"></i> рік</span></h3>
             <div>
                 <p><em>млн. євро</em>, прогноз</p>
             </div>
